# arcaflow-plugin-elasticsearch

./: .gitignore  Dockerfile  Dockerfile.integration  README.md  docker-compose-integration.yml  docker-compose.yml  es_plugin.py  es_schema.py  pyproject.toml  requirements.txt  test_es_plugin.py
.github/workflows/: carpenter.yaml
fixtures/: empty_data.yaml  example_es.yaml
tests/integration/: docker-compose.yml  test_es_plugin.py
tests/integration/fixtures/: empty_data.yaml  nested_data.yaml  simple_data.yaml
tests/unit/: test_es_plugin.py
